--- a/front/src/components/BoardItem/style.css
+++ b/front/src/components/BoardItem/style.css
@@ -1,10 +1,10 @@
 #board-item-wrap {
-  background-color: bisque;
+  background-color: #d9d9d9;
   width: 360px;
   height: 480px;
   border-radius: 10px;
   padding: 10px 20px;
-  margin-right: 15px;
+  margin: 0px 30px;
 }
 
 .board-item-top-box {
