--- a/front/src/views/Main/style.css
+++ b/front/src/views/Main/style.css
@@ -1,20 +1,35 @@
 #main-wrap {
   width: 100%;
+  padding-bottom: 300px; /*or height로 높이주기*/
 }
 
 .main-top-box {
-  background-color: aquamarine;
   padding: 10px;
   text-align: center;
   font-size: 32px;
   font-weight: 500;
+  padding: 50px 0px 20px 0px;
 }
 
 .main-bottom-box {
-  background-color: rgb(95, 99, 175);
   padding: 10px;
 }
 
 .board-top-item-list {
   display: flex;
+}
+
+.board-top-title,
+.board-middle-title,
+.board-bottom-title {
+  margin: 50px 0px 20px 50px;
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.board-top-item-list,
+.board-middle-item-list,
+.board-bottom-item-list {
+  display: flex;
+  justify-content: center;
 }
