--- a/front/src/views/Authentication/style.css
+++ b/front/src/views/Authentication/style.css
@@ -1,12 +1,13 @@
-#sign-in-wrap {
+#sign-in-wrap,
+#sign-up-wrap {
   width: 630px;
-  height: 800px;
+  min-height: 900px;
   margin: auto;
 }
 
 .sign-in-access-options {
   width: 350px;
-  margin: auto;
+  margin: 40px auto;
 }
 
 .sign-in-access-options ul {
@@ -22,7 +23,8 @@
   margin: auto;
 }
 
-.sign-in-title {
+.sign-in-title,
+.sign-up-title {
   height: 130px;
   text-align: center;
   line-height: 200px;
@@ -37,7 +39,7 @@
   height: 50px;
   border-style: none;
   border-bottom: 1px solid rgb(201, 201, 201);
-  font-size: 17px;
+  font-size: 16px;
 }
 
 .sign-in-input-box input:focus {
@@ -60,14 +62,14 @@
 
 .social_login_box {
   margin: auto;
-  width: 400px;
+  width: 450px;
 }
 
 .social_login_image-box-g,
 .social_login_image-box-k,
 .social_login_image-box-n {
   border-radius: 7px;
-  width: 400px;
+  width: 450px;
   height: 50px;
   display: flex;
   margin-top: 12px;
@@ -112,15 +114,87 @@
 }
 
 .social_login_title {
-  margin: auto 0px auto 100px;
+  margin: auto 0px auto 130px;
   color: #000000ab;
   font-weight: 600;
 }
 
 hr {
-  width: 450px;
+  width: 500px;
   background: rgb(195, 195, 195);
   height: 1px;
   border: 0;
   margin: 30px auto;
+}
+
+.join-Certified-Input-Box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+
+.email-certification-btn {
+  margin: 50px 0px 0px 30px;
+  display: flex;
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+  border: 1px solid #76767656;
+  border-radius: 8px;
+  width: 100px;
+  height: 50px;
+  font-size: 14px;
+}
+
+.join_input_box > .inputbox {
+  margin-left: 24px;
+}
+
+.auth-join-bottom {
+  display: flex;
+  justify-content: center;
+}
+
+.black-large-full-button,
+.auth-cancel-button {
+  margin: 40px 30px;
+  border-radius: 8px;
+  border-color: #bfbaba5f;
+  border-style: solid;
+  width: 120px;
+  height: 50px;
+
+  display: flex;
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center; /* 수직 가운데 정렬 */
+}
+
+.auth-card-bottom {
+  width: 450px;
+  margin: 30px auto;
+}
+
+/* 로그인 페이지 로그인 버튼 */
+.login_button_off {
+  width: 450px;
+  height: 55px;
+  border: 1px solid #7676763c;
+  border-radius: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login_button_on {
+  width: 450px;
+  height: 55px;
+  border: 1px solid #76767600;
+  border-radius: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #ffd9c2;
 }
