로그인 페이지, 회원가입 페이지 분할

--- a/front/src/layouts/Header/style.css
+++ b/front/src/layouts/Header/style.css
@@ -67,7 +67,7 @@
 }
 
 .header-login-button {
-  font-size: 12px;
+  font-size: 13px;
   width: 100px;
   height: 45px;
   border: 1px solid black;
@@ -110,4 +110,11 @@
 
 .header-category-dropdown {
   height: 35px;
+}
+
+.header-left-box,
+.header-right-box,
+.header-search-img,
+.header-bottom-box > div {
+  cursor: pointer;
 }
