이메일 인 기능증 작성중

--- a/front/src/views/Authentication/sign-in/style.css
+++ b/front/src/views/Authentication/sign-in/style.css
@@ -160,3 +160,8 @@ hr {
 .social_login_box > div {
   cursor: pointer;
 }
+
+.auth-sign-in-error-box {
+  white-space: "pre-line";
+  margin-bottom: 20px;
+}
