--- a/front/src/components/InputBox/style.css
+++ b/front/src/components/InputBox/style.css
@@ -13,7 +13,8 @@
   font-weight: 700;
 }
 
-.inputbox-container input {
+.inputbox-container input,
+.inputbox-container-readonly input {
   border-bottom: 1px solid rgba(0, 0, 0, 0.143);
   width: 450px;
   height: 50px;
