--- a/front/src/views/Authentication/sign-up/style.css
+++ b/front/src/views/Authentication/sign-up/style.css
@@ -43,8 +43,8 @@
   width: 100px;
   height: 50px;
   font-size: 14px;
-  cursor: pointer;
   background-color: #a0a0a056;
+  user-select: none;
 }
 
 .join_input_box > .inputbox {
