--- a/front/src/views/BoardWrite/style.css
+++ b/front/src/views/BoardWrite/style.css
@@ -1,7 +1,11 @@
 #board-write-wrap {
-  width: 630px;
+  width: 800px;
   min-height: 900px;
   margin: auto;
+}
+
+.board-write-top {
+  margin-top: 50px;
 }
 
 .board-title {
@@ -56,24 +60,44 @@
 }
 
 .board-main-left {
-  width: 100%;
+  width: 90%;
+}
+
+.board-main-right {
+  width: 10%;
+  margin-left: 20px;
 }
 
 .board-registered {
   border: 1px solid rgba(0, 0, 0, 0.134);
-  border-radius: 58px;
+  border-radius: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  padding: 15px;
+  width: 40px;
 }
 
 .board-attach-icon {
-  width: 40px;
-  height: 40px;
+  /* outline: 1px solid black; */
+  width: 30px;
+  height: 30px;
+  padding: 20px;
   background-image: url(../../assets/image/img-attach.png);
   background-size: 60%;
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
+
+  text-align: center;
+  line-height: 6em;
+}
+
+.board-input-title > input {
+  width: 100%;
+  height: 60px;
+  padding: 0px;
+  border-radius: 5px;
+  border-style: solid;
 }
