--- a/front/src/views/BoardWrite/style.css
+++ b/front/src/views/BoardWrite/style.css
@@ -18,7 +18,9 @@
 
 .board-category {
   width: 130px;
-  margin: 20px 0px;
+  display: inline-block;
+  position: relative;
+  margin: auto 0px;
 }
 
 .board-dropdown-box {
@@ -29,6 +31,8 @@
   border-radius: 8px;
   padding: 8px 12px;
   font-size: 14px;
+  align-items: center;
+  justify-content: center;
 }
 
 .board-dropdown-icon {
@@ -47,8 +51,8 @@
   border-radius: 5px;
   min-width: 160px;
   z-index: 1;
-  max-height: 200px; /* 적절한 최대 높이 설정 */
-  overflow-y: auto; /* 내용이 넘칠 경우 스크롤 표시 */
+  max-height: 200px;
+  overflow-y: auto;
 }
 
 .board-dropdown-content-item:hover {
@@ -60,7 +64,7 @@
 }
 
 .board-main-left {
-  width: 90%;
+  width: 100%;
 }
 
 .board-main-right {
@@ -75,8 +79,8 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  padding: 15px;
-  width: 40px;
+  width: 70px;
+  height: 50px;
 }
 
 .board-attach-icon {
@@ -95,9 +99,30 @@
 }
 
 .board-input-title > input {
-  width: 100%;
-  height: 60px;
-  padding: 0px;
+  width: 788px;
+  height: 40px;
+  padding-left: 10px;
   border-radius: 5px;
-  border-style: solid;
+  border: 1px solid rgba(4, 4, 4, 0.137);
+  margin-bottom: 10px;
+}
+
+.function-line {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0px;
+}
+
+.board-bottom-tag > input {
+  width: 788px;
+  height: 40px;
+  padding-left: 10px;
+  border-radius: 5px;
+  border: 1px solid rgba(4, 4, 4, 0.137);
+  margin: 20px 0px;
+}
+
+.board-bottom-tag {
+  margin-top: 30px;
+  border-top: 1px solid rgba(0, 0, 0, 0.137);
 }
