--- a/front/src/views/Admin/UserList/style.css
+++ b/front/src/views/Admin/UserList/style.css
@@ -15,7 +15,7 @@
 
 .userList-top {
   width: 630px;
-  margin: 40px 360px 30px 300px;
+  margin: 40px 360px 30px 410px;
 
   height: 50px;
   display: flex;
@@ -42,6 +42,7 @@
   height: 56px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .userList-item-check-box input,
@@ -53,9 +54,10 @@
 .userList-item-id {
   display: flex;
   align-items: center;
-  width: 70px;
+  width: 40px;
   height: 56px;
   padding: 0px 10px;
+  justify-content: center;
 }
 
 .classification-nickName,
@@ -64,6 +66,7 @@
   align-items: center;
   width: 140px;
   height: 56px;
+  justify-content: center;
 }
 
 .classification-name,
@@ -73,15 +76,17 @@
   width: 130px;
   height: 56px;
   padding: 0px 10px;
+  justify-content: center;
 }
 
 .classification-email,
 .userList-item-email {
   display: flex;
   align-items: center;
-  width: 230px;
+  width: 210px;
   height: 56px;
   padding: 0px 10px;
+  justify-content: center;
 }
 
 .classification-writerDate,
@@ -91,6 +96,7 @@
   width: 100px;
   height: 56px;
   padding: 0px 10px;
+  justify-content: center;
 }
 
 .classification-authority,
@@ -100,6 +106,7 @@
   width: 60px;
   height: 56px;
   padding: 0px 10px;
+  justify-content: center;
 }
 
 .classification-actions,
@@ -109,6 +116,7 @@
   width: 50px;
   height: 56px;
   padding: 0px 10px;
+  justify-content: center;
 }
 
 .actions-icon-img {
@@ -120,7 +128,6 @@
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
-  margin-left: 10px;
 }
 /*  */
 .userList-mid {
@@ -136,7 +143,7 @@
 }
 
 .userList-mid-right {
-  margin-left: 110px;
+  margin-left: 220px;
 }
 
 .admin-menu-userList {
