--- a/front/src/views/BoardWrite/style.css
+++ b/front/src/views/BoardWrite/style.css
@@ -27,7 +27,7 @@
   cursor: pointer;
   display: flex;
   margin-right: 20px;
-  border: 1px solid #bbb;
+  border: 1px solid rgba(4, 4, 4, 0.137);
   border-radius: 8px;
   padding: 8px 12px;
   font-size: 14px;
@@ -45,14 +45,25 @@
 }
 
 .board-dropdown-content {
-  position: absolute;
-  background-color: #f9f9f9;
-  border: 1px solid rgba(0, 0, 0, 0.134);
-  border-radius: 5px;
+  background-color: #fff;
+  border: 1px solid #ebebeb;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
   min-width: 160px;
+  position: absolute;
   z-index: 1;
-  max-height: 200px;
-  overflow-y: auto;
+}
+
+.board-dropdown-content-item {
+  padding: 12px 48px 12px 16px;
+  cursor: pointer;
+  color: rgba(34, 34, 34, 0.8);
+  max-width: 200px;
+
+  white-space: nowrap; /* 줄바꿈을 방지합니다. */
+  overflow: hidden; /* 내용이 넘칠 경우 숨깁니다. */
+  text-overflow: ellipsis; /* 내용이 넘칠 경우 '...'로 표시합니다. */
 }
 
 .board-dropdown-content-item:hover {
