--- a/front/src/views/BoardWrite/style.css
+++ b/front/src/views/BoardWrite/style.css
@@ -137,3 +137,30 @@
   margin-top: 30px;
   border-top: 1px solid rgba(0, 0, 0, 0.137);
 }
+
+.tag-delete-icon {
+  width: 20px;
+  height: 20px;
+  background-image: url(../../assets/image/tag-delete-icon.png);
+  background-size: 60%;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.tag-list {
+  display: flex;
+  margin-right: 10px;
+  align-items: center;
+}
+
+.tag-list-area {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.tag-content {
+  background-color: #bbbbbb46;
+  border-radius: 5px;
+  padding: 4px 8px;
+}
