--- a/front/src/views/BoardDetail/style.css
+++ b/front/src/views/BoardDetail/style.css
@@ -25,7 +25,7 @@
 
 .board-detail-top-left,
 .board-detail-mid-left,
-.board-detail-mid-right {
+.board-detail-info-right {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,26 +33,26 @@
 
 .board-detail-top-left,
 .board-detail-mid-left {
-  padding-left: 20px;
+  margin-left: 20px;
 }
 
-.board-detail-top-right,
-.board-detail-mid-right {
-  padding-right: 20px;
+.board-detail-info-left,
+.board-detail-top-right {
+  margin-right: 20px;
 }
 
 .board-detail-mid {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 80px;
+  min-height: 500px;
   border-bottom: 1px solid #c7c7c7;
+
+  padding: 25px;
+  display: flex;
+  flex-direction: column; /* 자식 요소들을 수직으로 배치 */
 }
 
 .board-detail-bottom {
-  width: 100%;
-  min-height: 500px;
+  background-color: #fff;
+  padding: 25px;
 }
 
 .board-detail-profile-img {
@@ -79,15 +79,12 @@
   background-color: #f2f2f2;
   border-radius: 10px;
   border: 1px solid #c7c7c7;
+  cursor: pointer;
 }
 
 .board-list-btn-container {
   display: flex;
   justify-content: flex-end;
-}
-
-.board-detail {
-  padding: 30px;
 }
 
 .board-detail-category {
@@ -98,4 +95,98 @@
 .board-detail-title {
   font-size: 20px;
   font-weight: bold;
+}
+
+.border-detail-tag {
+  margin-top: auto; /* 위쪽 여백을 자동으로 설정하여 맨 아래에 위치하게 함 */
+  display: flex;
+}
+
+.border-detail-tag-item {
+  cursor: pointer;
+  color: blue;
+  margin-right: 10px;
+}
+
+.board-detail-info {
+  display: flex;
+  margin-top: 8px;
+}
+
+.board-detail-top-right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.board-detail-comment-icon {
+  width: 30px;
+  height: 25px;
+  background-image: url(../../assets/image/boarditem-count.png);
+  background-size: 100% 100%;
+  margin-right: 5px;
+}
+
+.board-deatil-like-icon {
+  width: 30px;
+  height: 25px;
+  background-image: url(../../assets/image/boarditem-like.png);
+  background-size: 100% 100%;
+  margin-right: 5px;
+}
+
+.board-detail-comment,
+.board-detail-like {
+  display: flex;
+  margin-right: 20px;
+}
+
+.comment-write-btn {
+  border: 1px solid #787878;
+  font-size: 20px;
+}
+
+.board-detail-comment-write {
+  display: flex;
+}
+
+.board-detail-interactions {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.board-detail-comment-textarea {
+  width: 80%;
+  height: 70px;
+  padding: 15px;
+  resize: none;
+  outline: none; /* 클릭 시 테두리 제거 */
+  font-size: 17px;
+}
+
+.comment-write-btn {
+  width: 15%;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.board-detail-comment-item {
+  margin-top: 30px;
+  border-bottom: 1px solid #c7c7c7;
+}
+
+.board-comment-item-detail,
+.board-comment-item-nickname {
+  margin-bottom: 8px;
+}
+
+.board-comment-item-date {
+  margin-bottom: 30px;
+}
+
+.board-comment-item-nickname {
+  font-weight: bold;
+  font-size: 19px;
 }
