--- a/front/src/views/Main/style.css
+++ b/front/src/views/Main/style.css
@@ -12,10 +12,6 @@
   padding: 50px 0px 20px 0px;
 }
 
-.main-bottom-box {
-  padding: 10px;
-}
-
 .board-top-item-list {
   display: flex;
 }
@@ -23,7 +19,7 @@
 .board-top-title,
 .board-middle-title,
 .board-bottom-title {
-  margin: 50px 0px 20px 50px;
+  margin: 50px 0px 20px 60px;
   font-size: 26px;
   font-weight: 600;
 }
@@ -80,4 +76,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0px 10px;
 }
