--- a/front/src/views/BoardDetail/style.css
+++ b/front/src/views/BoardDetail/style.css
@@ -1,192 +1,216 @@
 #board-detail-wrap {
-  width: 800px;
-  min-height: 900px;
-  margin: auto;
+    width: 800px;
+    min-height: 900px;
+    margin: auto;
 }
 
 .board-detail-content {
-  border: 1px solid #c7c7c7;
-  border-radius: 6px;
-  width: 100%;
-  min-height: 600px;
-  margin: 100px auto 10px auto;
+    border: 1px solid #c7c7c7;
+    border-radius: 6px;
+    width: 100%;
+    min-height: 600px;
+    margin: 100px auto 10px auto;
 }
 
 .board-detail-top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-  width: 100%;
-  height: 80px;
-  background-color: #f2f2f2;
-  border-bottom: 1px solid #c7c7c7;
+    width: 100%;
+    height: 80px;
+    background-color: #f2f2f2;
+    border-bottom: 1px solid #c7c7c7;
 }
 
 .board-detail-top-left,
 .board-detail-mid-left,
 .board-detail-info-right {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .board-detail-top-left,
 .board-detail-mid-left {
-  margin-left: 20px;
+    margin-left: 20px;
 }
 
 .board-detail-info-left,
 .board-detail-top-right {
-  margin-right: 20px;
+    margin-right: 20px;
+    position: relative;
+}
+
+.user-information-box {
+    position: absolute;
+    top: 120%;
+    width: 110%;
+    left: 0%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.user-information-box-child:first-child{
+    border-top: 1px solid black;
+}
+.user-information-box-child {
+    padding: 10px;
+    border: 1px solid black;
+    border-top: 0px;
+    cursor: pointer;
+}
+.user-information-box-child:hover{
+    background-color: #e6e6e6;
 }
 
 .board-detail-mid {
-  min-height: 500px;
-  border-bottom: 1px solid #c7c7c7;
+    min-height: 500px;
+    border-bottom: 1px solid #c7c7c7;
 
-  padding: 25px;
-  display: flex;
-  flex-direction: column; /* 자식 요소들을 수직으로 배치 */
+    padding: 25px;
+    display: flex;
+    flex-direction: column; /* 자식 요소들을 수직으로 배치 */
 }
 
 .board-detail-bottom {
-  background-color: #fff;
-  padding: 25px;
+    background-color: #fff;
+    padding: 25px;
 }
 
 .board-detail-profile-img {
-  width: 30px;
-  height: 30px;
-  background-image: url(../../assets/image/board-item-profile-img.png);
-  background-size: 100% 100%;
-  margin-right: 10px;
+    width: 30px;
+    height: 30px;
+    background-image: url(../../assets/image/board-item-profile-img.png);
+    background-size: 100% 100%;
+    margin-right: 10px;
 }
 
 .board-detail-views-icon {
-  width: 30px;
-  height: 20px;
-  background-image: url(../../assets/image/boarditem-view.png);
-  background-size: 100% 100%;
-  margin-right: 5px;
+    width: 30px;
+    height: 20px;
+    background-image: url(../../assets/image/boarditem-view.png);
+    background-size: 100% 100%;
+    margin-right: 5px;
 }
+
 .board-list-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 130px;
-  height: 55px;
-  background-color: #f2f2f2;
-  border-radius: 10px;
-  border: 1px solid #c7c7c7;
-  cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 130px;
+    height: 55px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    border: 1px solid #c7c7c7;
+    cursor: pointer;
 }
 
 .board-list-btn-container {
-  display: flex;
-  justify-content: flex-end;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .board-detail-category {
-  margin-left: 10px;
-  color: #959595;
+    margin-left: 10px;
+    color: #959595;
 }
 
 .board-detail-title {
-  font-size: 20px;
-  font-weight: bold;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .border-detail-tag {
-  margin-top: auto; /* 위쪽 여백을 자동으로 설정하여 맨 아래에 위치하게 함 */
-  display: flex;
+    margin-top: auto; /* 위쪽 여백을 자동으로 설정하여 맨 아래에 위치하게 함 */
+    display: flex;
 }
 
 .border-detail-tag-item {
-  cursor: pointer;
-  color: blue;
-  margin-right: 10px;
+    cursor: pointer;
+    color: blue;
+    margin-right: 10px;
 }
 
 .board-detail-info {
-  display: flex;
-  margin-top: 8px;
+    display: flex;
+    margin-top: 8px;
 }
 
 .board-detail-top-right {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .board-detail-comment-icon {
-  width: 30px;
-  height: 25px;
-  background-image: url(../../assets/image/boarditem-count.png);
-  background-size: 100% 100%;
-  margin-right: 5px;
+    width: 30px;
+    height: 25px;
+    background-image: url(../../assets/image/boarditem-count.png);
+    background-size: 100% 100%;
+    margin-right: 5px;
 }
 
 .board-deatil-like-icon {
-  width: 30px;
-  height: 25px;
-  background-image: url(../../assets/image/boarditem-like.png);
-  background-size: 100% 100%;
-  margin-right: 5px;
+    width: 30px;
+    height: 25px;
+    background-image: url(../../assets/image/boarditem-like.png);
+    background-size: 100% 100%;
+    margin-right: 5px;
 }
 
 .board-detail-comment,
 .board-detail-like {
-  display: flex;
-  margin-right: 20px;
+    display: flex;
+    margin-right: 20px;
 }
 
 .comment-write-btn {
-  border: 1px solid #787878;
-  font-size: 20px;
+    border: 1px solid #787878;
+    font-size: 20px;
 }
 
 .board-detail-comment-write {
-  display: flex;
+    display: flex;
 }
 
 .board-detail-interactions {
-  display: flex;
-  margin-bottom: 20px;
+    display: flex;
+    margin-bottom: 20px;
 }
 
 .board-detail-comment-textarea {
-  width: 80%;
-  height: 70px;
-  padding: 15px;
-  resize: none;
-  outline: none; /* 클릭 시 테두리 제거 */
-  font-size: 17px;
+    width: 80%;
+    height: 70px;
+    padding: 15px;
+    resize: none;
+    outline: none; /* 클릭 시 테두리 제거 */
+    font-size: 17px;
 }
 
 .comment-write-btn {
-  width: 15%;
-  margin-left: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    width: 15%;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .board-detail-comment-item {
-  margin-top: 30px;
-  border-bottom: 1px solid #c7c7c7;
+    margin-top: 30px;
+    border-bottom: 1px solid #c7c7c7;
 }
 
 .board-comment-item-detail,
 .board-comment-item-nickname {
-  margin-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 .board-comment-item-date {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .board-comment-item-nickname {
-  font-weight: bold;
-  font-size: 19px;
+    font-weight: bold;
+    font-size: 19px;
 }
