--- a/front/src/views/BoardDetail/style.css
+++ b/front/src/views/BoardDetail/style.css
@@ -77,13 +77,22 @@
     background-color: #fff;
     padding: 25px;
 }
-
+.board-detail-profile-img-box{
+    width: 38px;
+    height: 38px;
+}
+.profile-img{
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    border-radius: 50%;
+}
 .board-detail-profile-img {
     width: 30px;
     height: 30px;
     background-image: url(../../assets/image/board-item-profile-img.png);
     background-size: 100% 100%;
-    margin-right: 10px;
+    /*margin-right: 10px;*/
 }
 
 .board-detail-views-icon {
@@ -141,6 +150,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+    cursor: pointer;
 }
 
 .board-detail-comment-icon {
