상세페이지, 게시물 스타일 수정중

--- a/front/src/views/BoardList/style.css
+++ b/front/src/views/BoardList/style.css
@@ -101,3 +101,14 @@
 .board-list-top {
   margin: 30px 0px;
 }
+
+.list-write-title {
+  font-size: 25px;
+
+  margin: 40px 0px;
+}
+
+.board-list-bottom {
+  display: flex;
+  justify-content: flex-end;
+}
