--- a/front/src/layouts/Header/style.css
+++ b/front/src/layouts/Header/style.css
@@ -34,10 +34,10 @@
   background-image: url(../../assets/image/search-icon.png);
   background-size: cover;
   position: absolute;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   top: 8px;
-  right: 0px;
+  right: -15px;
   margin: 0;
 }
 
@@ -67,12 +67,14 @@
 
 .header-login-button {
   font-size: 13px;
-  width: 100px;
+  width: 110px;
   height: 45px;
-  border: 1px solid black;
+  border: 1px solid rgb(143, 143, 143);
+  border-radius: 7px;
   display: flex;
   align-items: center;
   justify-content: center;
+  color: rgb(41, 41, 41);
 }
 
 /* 카테고리 드롭박스  */
