--- a/front/src/views/Admin/Categories/style.css
+++ b/front/src/views/Admin/Categories/style.css
@@ -157,43 +157,6 @@
 
 /* 검색 input */
 
-.admin-search {
-  position: relative;
-  width: 500px;
-  height: 35px;
-}
-
-.admin-search input {
-  width: 100%;
-  border: 1px solid #bbb;
-  border-radius: 8px;
-  padding: 10px 12px;
-  font-size: 14px;
-}
-
-.admin-search-img {
-  background-image: url(../../../assets/image/search-icon.png);
-  background-size: cover;
-  position: absolute;
-  width: 24px;
-  height: 24px;
-  top: 8px;
-  right: 0px;
-  margin: 0;
-}
-
-.admin-search-img,
-.dropdown-box,
-.admin-categori-add {
-  cursor: pointer;
-}
-
-.admin-categori-bottom-top {
-  display: flex;
-  width: 650px;
-  margin: auto;
-}
-
 .admin-categori-add {
   border: 1px solid rgba(120, 90, 90, 0.194);
   width: 80px;
@@ -206,12 +169,12 @@
   margin-left: 10px;
 }
 
-.admin-categori-search {
+.admin-categori-add-container {
   display: flex;
   margin-bottom: 15px;
 }
 
-.admin-categori-search > input {
+.admin-categori-add-container > input {
   width: 619px;
   height: 40px;
   border: 1px solid rgba(120, 90, 90, 0.194);
