--- a/front/src/components/SearchInputBox/style.css
+++ b/front/src/components/SearchInputBox/style.css
@@ -28,3 +28,10 @@
   padding: 10px 12px;
   font-size: 14px;
 }
+
+.dropdown_text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 56px;
+}
