--- a/front/src/views/Admin/AdminBoardList/style.css
+++ b/front/src/views/Admin/AdminBoardList/style.css
@@ -69,11 +69,11 @@
   justify-content: center;
 }
 
-.classification-email,
+.classification-title,
 .admin-item-title {
   display: flex;
   align-items: center;
-  width: 190px;
+  width: 300px;
   height: 56px;
   padding: 0px 10px;
   justify-content: center;
