--- a/front/src/components/CommentItem/style.css
+++ b/front/src/components/CommentItem/style.css
@@ -1,44 +1,53 @@
 .comment-item-wrap {
-    display: flex;
-    margin-top: 30px;
-    border-bottom: 1px solid #c7c7c7;
-    flex-direction: column;
-    padding-bottom: 10px;
-    gap: 5px;
+  display: flex;
+  margin-top: 30px;
+  border-bottom: 1px solid #c7c7c7;
+  flex-direction: column;
+  padding-bottom: 10px;
+  gap: 5px;
 }
-.comment-item-top{
-    display: flex;
-    align-items: center;
-    gap: 10px;
+.comment-item-top {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
-.comment-user-box{
-    display: flex;
-    gap: 10px;
-    align-items: center;
+.comment-user-box {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .comment-profile-img-box {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
-.pointer{
-    cursor: pointer;
+.pointer {
+  cursor: pointer;
 }
-.comment-item-detail{
-    font-size: 17px;
-    padding-left: 5px;
+.comment-item-detail {
+  font-size: 17px;
+  padding-left: 5px;
 }
 
 .comment-item-date {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .comment-item-nickname {
-    font-size: 15px;
+  font-size: 15px;
 }
-.height-line-box{
-    height: 15px;
+.height-line-box {
+  height: 15px;
 }
-.height-line{
-    height: 100%;
-    border-left: 1px solid gray;
+.height-line {
+  height: 100%;
+  border-left: 1px solid gray;
+}
+
+.comment-item-delete {
+  width: 20px;
+  height: 30px;
+  background-image: url(../../assets/image/delete-icon.png);
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
 }
