--- a/front/src/views/Main/style.css
+++ b/front/src/views/Main/style.css
@@ -19,7 +19,7 @@
 .board-top-title,
 .board-middle-title,
 .board-bottom-title {
-  margin: 50px 0px 20px 60px;
+  margin: 50px 0px 20px 30px;
   font-size: 26px;
   font-weight: 600;
 }
@@ -28,7 +28,7 @@
 .board-middle-item-list,
 .board-bottom-item-list {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .recent-board-item-box {
@@ -66,11 +66,4 @@
 .recent-board-item-title {
   font-size: 24px;
   font-weight: bold;
-}
-
-.recent-board-item-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0px 10px;
 }
