--- a/front/src/views/Admin/AdminBoardList/style.css
+++ b/front/src/views/Admin/AdminBoardList/style.css
@@ -77,6 +77,9 @@
   height: 56px;
   padding: 0px 10px;
   justify-content: center;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .classification-writerDate,
