--- a/front/src/views/Admin/Categories/style.css
+++ b/front/src/views/Admin/Categories/style.css
@@ -147,6 +147,7 @@
   align-items: center;
   justify-content: center;
   margin-left: 10px;
+  cursor: pointer;
 }
 
 .admin-categori-add-container {
