--- a/front/src/components/BoardItem3/style.css
+++ b/front/src/components/BoardItem3/style.css
@@ -1,7 +1,9 @@
 .board-items {
+    display: flex;
+    flex-direction: column;
     border: 1px solid black;
-    height: 200px;
     padding: 10px 20px;
+    gap: 20px;
     margin-bottom: 30px;
 }
 
@@ -20,12 +22,6 @@
 
 .board-item-mid {
     font-size: 25px;
-}
-
-.board-item-mid,
-.board-item-bottom,
-.board-item-top {
-    margin-bottom: 35px;
 }
 
 .board-item-bottom {
@@ -76,7 +72,6 @@
 
 .list-write-title {
     font-size: 25px;
-
     margin: 40px 0px;
 }
 
