--- a/front/src/views/BoardList/style.css
+++ b/front/src/views/BoardList/style.css
@@ -17,12 +17,7 @@
   cursor: pointer;
 }
 
-.list-write-btn-icon {
-  margin: 5px 5px 5px 0px;
-  width: 25px;
-  height: 25px;
-  background-image: url(../../assets/image/write-btn-icon.png);
-  background-position: center;
-  background-size: cover;
+.board-list-mid {
+  width: 100%;
+  margin: auto;
 }
-
