Footer 스타일 수정중, BoardWrite Tag 관련 기능 수정, 스타일 수정중,

--- a/front/src/layouts/Header/style.css
+++ b/front/src/layouts/Header/style.css
@@ -129,13 +129,22 @@
   cursor: pointer;
 }
 
-.header-right-box-img {
+.header-right-box-img-default {
   width: 50px;
   height: 50px;
   background-image: url(../../assets/image/default-profile.png);
   background-size: 60%;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.header-right-box-img {
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  margin-right: 10px;
 }
 
 .header-right-box-drop {
