--- a/front/src/layouts/Header/style.css
+++ b/front/src/layouts/Header/style.css
@@ -158,6 +158,7 @@
 }
 
 .profile-dropdown-content {
+  margin-top: 10px;
   position: absolute;
   background-color: #f9f9f9;
   border: 1px solid rgba(0, 0, 0, 0.134);
@@ -171,7 +172,7 @@
 .profile-dropdown-content-item {
   height: 40px;
   line-height: 2.5em;
-  text-align: center;
+  padding-left: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.134);
 }
 
