--- a/front/src/views/BoardWrite/style.css
+++ b/front/src/views/BoardWrite/style.css
@@ -11,7 +11,7 @@
 .board-title {
   height: 100px;
   font-size: 32px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #7d7d7d;
   display: flex;
   align-items: center;
 }
