--- a/front/src/App.css
+++ b/front/src/App.css
@@ -2,3 +2,10 @@ body {
   min-width: 1440px;
   margin: auto;
 }
+
+.box-img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  margin-right: 10px;
+}
