--- a/front/src/views/UserPage/style.css
+++ b/front/src/views/UserPage/style.css
@@ -1,58 +1,26 @@
-#userPage-wrap {
-  width: 800px;
-  min-height: 700px;
-  margin: auto;
-}
-
-.userPage-box {
-  background-color: #f5f5f5;
-  margin-top: 100px;
-  border: 1px solid black;
-  padding: 40px;
-}
-
-.userPage-top {
-  height: 50px;
-  border-bottom: 1px solid black;
-}
-
-.userPage-title {
-  font-size: 25px;
-  font-weight: 600;
-}
-
-.userPage-mid {
+#user-page-content-wrap{
   display: flex;
-  margin: 50px 0px;
+  flex-direction: column;
+  align-items: center;
 }
-
-.user-img {
-  width: 200px;
-  height: 200px;
-  margin-right: 40px;
-  background-image: url(../../assets/image/default-profile.png);
-  background-position: center;
-  background-size: cover;
+#top{
+  display: flex;
+  flex-direction: column;
 }
-
-.user-information {
-  width: 62%;
-  font-size: 20px;
+.top-top{
+  padding: 30px;
+  display: flex;
+  gap: 10px;
 }
-
-.user-email,
-.user-id,
-.user-nickName,
-.user-birthDate {
-  width: 100%;
-  padding-bottom: 10px;
-  margin-bottom: 15px;
-  border-bottom: 1px solid black;
+.top-top-image{
+  width: 100px;
+  height: 100px;
 }
-
-.userPage-bottom {
-  font-size: 20px;
-  padding-left: 10px;
-  margin-bottom: 20px;
-  font-weight: 600;
+.top-top-infobox{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.nickname-box{
+  display: flex;
 }
