feat 유저페이지 작성중

--- a/front/src/views/UserPage/style.css
+++ b/front/src/views/UserPage/style.css
@@ -35,6 +35,9 @@
   font-weight: bold;
 }
 
-.nickname-box{
+.top-middle{
   display: flex;
+  flex-direction: column;
+  justify-content: left;
 }
+
