--- a/front/src/App.css
+++ b/front/src/App.css
@@ -9,3 +9,10 @@ body {
   border-radius: 50%;
   margin-right: 10px;
 }
+
+.icon-box30 {
+  width: 50px;
+  height: 50px;
+  background-size: 100% 100%;
+  /*margin-right: 10px;*/
+}
