--- a/front/src/views/UserPage/style.css
+++ b/front/src/views/UserPage/style.css
@@ -48,3 +48,47 @@
   justify-content: left;
 }
 
+.user-info-box-wrap{
+  min-height: 1080px;
+  display: flex;
+  justify-content: center;
+}
+.user-info-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 300px;
+}
+.user-info-title{
+  width: 100%;
+  padding-bottom: 30px;
+  font-size: 36px;
+}
+.user-info-input-box{
+  display: flex;
+  gap: 20px;
+}
+.input-box{
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 10px;
+}
+.password-input{
+  outline: none;
+  border: none;
+}
+.button{
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
+}
+.button:hover{
+
+}
