--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,8 +1,8 @@
 body {
   min-width: 1440px;
   margin: auto;
-  /*min-height: 100%;*/
   height: 100%;
+  /* background-color: rgb(239, 239, 230); */
 }
 
 .box-img {
