--- a/front/src/layouts/Header/style.css
+++ b/front/src/layouts/Header/style.css
@@ -1,5 +1,5 @@
 #header-wrap {
-  border-bottom: 1px solid rgb(165, 165, 165);
+  border-bottom: 1px solid rgb(193 193 193);
   width: 100%;
   height: 150px;
 }
@@ -46,10 +46,9 @@
 
 .header-top-box {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   height: 100px;
-  padding: 0px 35px;
+  margin: 0px 35px;
 }
 
 .header-left-box,
@@ -58,26 +57,64 @@
   align-items: center;
 }
 
-.header-bottom-box {
+.header-middle-box {
+  width: 610px;
+  margin-left: 26%;
+}
+
+.header-category-box {
   display: flex;
-  align-items: center;
-  padding: 5px 0px 0px 30px;
+  margin-left: 30px;
+  font-weight: 600;
+  line-height: 1em;
 }
 
 .heder-bottom-item {
   margin: 0px 10px;
 }
 
-.header-login-button {
+.header-right-box {
+  font-size: 13px;
+  width: 220px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 29%;
+}
+
+.header-right-box-login,
+.header-right-box-signUp {
   font-size: 13px;
   width: 110px;
   height: 45px;
-  border: 1px solid rgb(143, 143, 143);
   border-radius: 7px;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgb(41, 41, 41);
+}
+
+.header-login-button-login-icon {
+  width: 20px;
+  height: 20px;
+  background-image: url(../../assets/image/login-btn.png);
+  background-size: 100%;
+  background-position: center;
+}
+
+.header-login-button-signUp-icon {
+  width: 20px;
+  height: 20px;
+  background-image: url(../../assets/image/sign-up-icon.png);
+  background-size: 100%;
+  background-position: center;
+}
+
+.header-login-button {
+  margin-left: 5px;
+  font-size: 14px;
+  line-height: 1vh;
+  font-weight: 700;
 }
 
 /* 카테고리 드롭박스  */
@@ -130,7 +167,7 @@
 .header-left-box,
 .header-right-box,
 .header-search-img,
-.header-bottom-box > div,
+.header-category-box > div,
 .dropdown-box {
   cursor: pointer;
 }
@@ -163,6 +200,16 @@
   margin-right: 10px;
 }
 
+.category-drop-icon {
+  width: 20px;
+  height: 20px;
+  background-image: url(../../assets/image/dropdown-icon.png);
+  background-size: 60%;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-right: 10px;
+}
+
 .profile-dropdown-content {
   margin-top: 10px;
   position: absolute;
@@ -173,15 +220,43 @@
   z-index: 1; /* 이 부분을 변경 */
   max-height: 200px;
   overflow-y: auto;
+  top: 6%;
 }
 
 .profile-dropdown-content-item {
   height: 40px;
-  line-height: 2.5em;
+  line-height: 3.2em;
   padding-left: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.134);
 }
 
 .profile-dropdown-content-item:hover {
+  background-color: #bbbbbb35;
+}
+
+.category-dropdown-content {
+  position: absolute;
+  background-color: #f9f9f9;
+  border: 1px solid rgba(0, 0, 0, 0.134);
+  border-radius: 5px;
+  min-width: 160px;
+  z-index: 1;
+  max-height: 200px;
+  overflow-y: auto;
+  top: 6%;
+}
+
+.category-dropdown-item {
+  padding: 12px 48px 12px 16px;
+  cursor: pointer;
+  color: rgba(34, 34, 34, 0.8);
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: 500;
+}
+
+.category-dropdown-item:hover {
   background-color: #bbbbbb35;
 }
