--- a/front/src/App.css
+++ b/front/src/App.css
@@ -3,6 +3,7 @@ body {
   margin: auto;
   height: 100%;
   /* background-color: rgb(239, 239, 230); */
+  font-family: "S-CoreDream-3Light", sans-serif;
 }
 
 .box-img {
@@ -17,4 +18,12 @@ body {
   height: 50px;
   background-size: 100% 100%;
   /*margin-right: 10px;*/
+}
+
+@font-face {
+  font-family: "S-CoreDream-3Light";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
