--- a/front/src/components/BoardItem2/style.css
+++ b/front/src/components/BoardItem2/style.css
@@ -26,6 +26,11 @@
 .recent-board-item-title {
   font-size: 24px;
   font-weight: bold;
+
+  white-space: nowrap; /* 텍스트를 한 줄로 표시, 줄바꿈 없음 */
+  overflow: hidden; /* 넘치는 텍스트 숨김 */
+  text-overflow: ellipsis; /* 넘치는 텍스트는 "..."으로 대체 */
+  width: 1330px;
 }
 
 .recent-board-item-list {
