--- a/front/src/views/BoardDetail/style.css
+++ b/front/src/views/BoardDetail/style.css
@@ -9,7 +9,7 @@
   border-radius: 6px;
   width: 100%;
   min-height: 600px;
-  margin: 100px auto 10px auto;
+  margin: 60px 0px 10px 0px;
 }
 
 .board-detail-top {
@@ -180,6 +180,7 @@
   background-image: url(../../assets/image/boarditem-like.png);
   background-size: 100% 100%;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .board-deatil-like-on-icon {
@@ -188,6 +189,7 @@
   background-image: url(../../assets/image/boarditem-color-like.png);
   background-size: 100% 100%;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .board-detail-comment,
@@ -283,4 +285,9 @@
 
 .error {
   border: 1px solid #ff0000;
+}
+
+.board-detail {
+  white-space: pre-wrap; /* 공백과 줄바꿈을 유지하며 줄바꿈 */
+  word-wrap: break-word; /* 긴 단어를 줄바꿈 */
 }
