--- a/front/src/components/BoardItem2/style.css
+++ b/front/src/components/BoardItem2/style.css
@@ -65,6 +65,13 @@
   background-size: cover;
 }
 
+.board-item-middle-box {
+  background-image: url(../../assets/image/default-img2.png);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+}
+
 .list-write-title {
   font-size: 25px;
   margin: 40px 0px;
@@ -75,8 +82,8 @@
 .board-view-box {
   display: flex;
   align-items: center;
-  width: 50px;
   font-size: 16px;
+  margin-left: 10px;
 }
 
 .board-comment-img {
