--- a/front/src/views/Admin/Categories/style.css
+++ b/front/src/views/Admin/Categories/style.css
@@ -179,6 +179,7 @@
 .admin-categori-mid-right-bottom {
   display: flex;
   justify-content: flex-end;
+  margin: 30px 0px 50px 0px;
 }
 
 .admin-categori-item-nickName {
