--- a/front/src/views/Admin/UserList/style.css
+++ b/front/src/views/Admin/UserList/style.css
@@ -139,6 +139,7 @@
 .userList-mid-right-bottom {
   display: flex;
   justify-content: flex-end;
+  margin: 30px 0px 50px 0px;
 }
 
 .admin-menu-userList-bold {
