--- a/front/src/views/UserPage/style.css
+++ b/front/src/views/UserPage/style.css
@@ -1,14 +1,17 @@
 #user-page-content-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
-#top {
+.user-page-main {
+  display: flex;
+  width: 1440px;
+  margin: auto;
+}
+#top-right {
   display: flex;
   flex-direction: column;
+  margin: 30px 0px 105px 0px;
 }
 .top-top {
-  padding: 30px;
+  padding: 30px 30px 40px 0px;
   display: flex;
   gap: 10px;
 }
@@ -72,6 +75,8 @@
   width: 100%;
   padding-bottom: 30px;
   font-size: 36px;
+  display: flex;
+  justify-content: center;
 }
 .user-info-input-box {
   display: flex;
@@ -102,7 +107,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 25px 0px;
+  margin: 40px 0px 25px 0px;
 }
 
 .user-modify-cancel,
@@ -112,4 +117,23 @@
   border-radius: 10px;
   color: rgb(78, 78, 78);
   cursor: pointer;
+}
+
+.top-left-item1,
+.top-left-item2,
+.top-left-item3 {
+  width: 120px;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.682);
+  margin-top: 18px;
+  font-size: 20px;
+}
+
+.top-left {
+  margin-left: 100px;
+  width: 400px;
+}
+
+.top-left-item1 {
+  margin-top: 100px;
 }
